# Maze

./: .gitignore  LICENSE  README.md  filetree.txt  pyproject.toml
examples/: 99bottles.mz  basic_input_test.mz  fibo.mz
src/maze/: __init__.py  __main__.py
src/maze/core/: car.py  interpreter.py
src/maze/ui/: base.py  cli.py  gui.py
src/maze_interpreter.egg-info/: PKG-INFO  SOURCES.txt
tests/core/: test_car.py  test_interpreter.py
